--- a/Obstacle Avoidance Car/Debug/Makefile
+++ b/Obstacle Avoidance Car/Debug/Makefile
@@ -49,6 +49,10 @@ SUBDIRS :=  \
 ../MCAL/dio \
 ../MCAL/exi \
 ../MCAL/gli \
+../MCAL/delay \
+../MCAL/TMR_UTILITIES \
+../MCAL/tmr2 \
+../MCAL/pwm \
 ../MCAL/tmr
 
 
@@ -62,9 +66,12 @@ C_SRCS +=  \
 ../HAL/swicu/swicu_program.c \
 ../HAL/usi/usi_program.c \
 ../main.c \
+../MCAL/delay/pwm_program.c \
 ../MCAL/dio/dio_program.c \
 ../MCAL/exi/exi_program.c \
 ../MCAL/gli/gli_program.c \
+../MCAL/pwm/pwm_program.c \
+../MCAL/tmr2/TMR2_interface.c \
 ../MCAL/tmr/tmr_program.c
 
 
@@ -83,9 +90,12 @@ HAL/lcd/lcd_program.o \
 HAL/swicu/swicu_program.o \
 HAL/usi/usi_program.o \
 main.o \
+MCAL/delay/pwm_program.o \
 MCAL/dio/dio_program.o \
 MCAL/exi/exi_program.o \
 MCAL/gli/gli_program.o \
+MCAL/pwm/pwm_program.o \
+MCAL/tmr2/TMR2_interface.o \
 MCAL/tmr/tmr_program.o
 
 OBJS_AS_ARGS +=  \
@@ -97,9 +107,12 @@ HAL/lcd/lcd_program.o \
 HAL/swicu/swicu_program.o \
 HAL/usi/usi_program.o \
 main.o \
+MCAL/delay/pwm_program.o \
 MCAL/dio/dio_program.o \
 MCAL/exi/exi_program.o \
 MCAL/gli/gli_program.o \
+MCAL/pwm/pwm_program.o \
+MCAL/tmr2/TMR2_interface.o \
 MCAL/tmr/tmr_program.o
 
 C_DEPS +=  \
@@ -111,9 +124,12 @@ HAL/lcd/lcd_program.d \
 HAL/swicu/swicu_program.d \
 HAL/usi/usi_program.d \
 main.d \
+MCAL/delay/pwm_program.d \
 MCAL/dio/dio_program.d \
 MCAL/exi/exi_program.d \
 MCAL/gli/gli_program.d \
+MCAL/pwm/pwm_program.d \
+MCAL/tmr2/TMR2_interface.d \
 MCAL/tmr/tmr_program.d
 
 C_DEPS_AS_ARGS +=  \
@@ -125,9 +141,12 @@ HAL/lcd/lcd_program.d \
 HAL/swicu/swicu_program.d \
 HAL/usi/usi_program.d \
 main.d \
+MCAL/delay/pwm_program.d \
 MCAL/dio/dio_program.d \
 MCAL/exi/exi_program.d \
 MCAL/gli/gli_program.d \
+MCAL/pwm/pwm_program.d \
+MCAL/tmr2/TMR2_interface.d \
 MCAL/tmr/tmr_program.d
 
 OUTPUT_FILE_PATH +=Obstacle\ Avoidance\ Car.elf
@@ -200,6 +219,13 @@ HAL/usi/usi_program.o: ../HAL/usi/usi_program.c
 	@echo Finished building: $<
 	
 
+MCAL/delay/pwm_program.o: ../MCAL/delay/pwm_program.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 MCAL/dio/dio_program.o: ../MCAL/dio/dio_program.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
@@ -215,6 +241,20 @@ MCAL/exi/exi_program.o: ../MCAL/exi/exi_program.c
 	
 
 MCAL/gli/gli_program.o: ../MCAL/gli/gli_program.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+MCAL/pwm/pwm_program.o: ../MCAL/pwm/pwm_program.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+MCAL/tmr2/TMR2_interface.o: ../MCAL/tmr2/TMR2_interface.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
