fix and update <project>: drivers

--- a/Obstacle Avoidance Car/Debug/Makefile
+++ b/Obstacle Avoidance Car/Debug/Makefile
@@ -39,8 +39,8 @@ SUBDIRS :=  \
 ../HAL/btn \
 ../HAL/lcd \
 ../HAL/kpd \
-../HAL/usi \
-../HAL/swicu \
+../HAL/icu \
+../HAL/us \
 ../LIB \
 ../LIB/bit_math \
 ../LIB/mcu_config \
@@ -49,11 +49,11 @@ SUBDIRS :=  \
 ../MCAL/dio \
 ../MCAL/exi \
 ../MCAL/gli \
-../MCAL/delay \
 ../MCAL/TMR_UTILITIES \
 ../MCAL/tmr2 \
-../MCAL/pwm \
-../MCAL/tmr
+../MCAL/tmr1 \
+../MCAL/tmr0 \
+../MCAL/pwm
 
 
 # Add inputs and outputs from these tool invocations to the build variables 
@@ -61,18 +61,18 @@ C_SRCS +=  \
 ../APP/app_program.c \
 ../HAL/btn/btn_program.c \
 ../HAL/dcm/dcm_program.c \
+../HAL/icu/icu_interface.c \
 ../HAL/kpd/kpd_program.c \
 ../HAL/lcd/lcd_program.c \
-../HAL/swicu/swicu_program.c \
-../HAL/usi/usi_program.c \
+../HAL/us/us_interface.c \
 ../main.c \
-../MCAL/delay/pwm_program.c \
 ../MCAL/dio/dio_program.c \
 ../MCAL/exi/exi_program.c \
 ../MCAL/gli/gli_program.c \
 ../MCAL/pwm/pwm_program.c \
-../MCAL/tmr2/TMR2_interface.c \
-../MCAL/tmr/tmr_program.c
+../MCAL/tmr0/tmr0_interface.c \
+../MCAL/tmr1/tmr1_interface.c \
+../MCAL/tmr2/tmr2_interface.c
 
 
 PREPROCESSING_SRCS += 
@@ -85,69 +85,69 @@ OBJS +=  \
 APP/app_program.o \
 HAL/btn/btn_program.o \
 HAL/dcm/dcm_program.o \
+HAL/icu/icu_interface.o \
 HAL/kpd/kpd_program.o \
 HAL/lcd/lcd_program.o \
-HAL/swicu/swicu_program.o \
-HAL/usi/usi_program.o \
+HAL/us/us_interface.o \
 main.o \
-MCAL/delay/pwm_program.o \
 MCAL/dio/dio_program.o \
 MCAL/exi/exi_program.o \
 MCAL/gli/gli_program.o \
 MCAL/pwm/pwm_program.o \
-MCAL/tmr2/TMR2_interface.o \
-MCAL/tmr/tmr_program.o
+MCAL/tmr0/tmr0_interface.o \
+MCAL/tmr1/tmr1_interface.o \
+MCAL/tmr2/tmr2_interface.o
 
 OBJS_AS_ARGS +=  \
 APP/app_program.o \
 HAL/btn/btn_program.o \
 HAL/dcm/dcm_program.o \
+HAL/icu/icu_interface.o \
 HAL/kpd/kpd_program.o \
 HAL/lcd/lcd_program.o \
-HAL/swicu/swicu_program.o \
-HAL/usi/usi_program.o \
+HAL/us/us_interface.o \
 main.o \
-MCAL/delay/pwm_program.o \
 MCAL/dio/dio_program.o \
 MCAL/exi/exi_program.o \
 MCAL/gli/gli_program.o \
 MCAL/pwm/pwm_program.o \
-MCAL/tmr2/TMR2_interface.o \
-MCAL/tmr/tmr_program.o
+MCAL/tmr0/tmr0_interface.o \
+MCAL/tmr1/tmr1_interface.o \
+MCAL/tmr2/tmr2_interface.o
 
 C_DEPS +=  \
 APP/app_program.d \
 HAL/btn/btn_program.d \
 HAL/dcm/dcm_program.d \
+HAL/icu/icu_interface.d \
 HAL/kpd/kpd_program.d \
 HAL/lcd/lcd_program.d \
-HAL/swicu/swicu_program.d \
-HAL/usi/usi_program.d \
+HAL/us/us_interface.d \
 main.d \
-MCAL/delay/pwm_program.d \
 MCAL/dio/dio_program.d \
 MCAL/exi/exi_program.d \
 MCAL/gli/gli_program.d \
 MCAL/pwm/pwm_program.d \
-MCAL/tmr2/TMR2_interface.d \
-MCAL/tmr/tmr_program.d
+MCAL/tmr0/tmr0_interface.d \
+MCAL/tmr1/tmr1_interface.d \
+MCAL/tmr2/tmr2_interface.d
 
 C_DEPS_AS_ARGS +=  \
 APP/app_program.d \
 HAL/btn/btn_program.d \
 HAL/dcm/dcm_program.d \
+HAL/icu/icu_interface.d \
 HAL/kpd/kpd_program.d \
 HAL/lcd/lcd_program.d \
-HAL/swicu/swicu_program.d \
-HAL/usi/usi_program.d \
+HAL/us/us_interface.d \
 main.d \
-MCAL/delay/pwm_program.d \
 MCAL/dio/dio_program.d \
 MCAL/exi/exi_program.d \
 MCAL/gli/gli_program.d \
 MCAL/pwm/pwm_program.d \
-MCAL/tmr2/TMR2_interface.d \
-MCAL/tmr/tmr_program.d
+MCAL/tmr0/tmr0_interface.d \
+MCAL/tmr1/tmr1_interface.d \
+MCAL/tmr2/tmr2_interface.d
 
 OUTPUT_FILE_PATH +=Obstacle\ Avoidance\ Car.elf
 
@@ -184,6 +184,13 @@ HAL/dcm/dcm_program.o: ../HAL/dcm/dcm_program.c
 	@echo Finished building: $<
 	
 
+HAL/icu/icu_interface.o: ../HAL/icu/icu_interface.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 HAL/kpd/kpd_program.o: ../HAL/kpd/kpd_program.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
@@ -198,14 +205,7 @@ HAL/lcd/lcd_program.o: ../HAL/lcd/lcd_program.c
 	@echo Finished building: $<
 	
 
-HAL/swicu/swicu_program.o: ../HAL/swicu/swicu_program.c
-	@echo Building file: $<
-	@echo Invoking: AVR/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
-	@echo Finished building: $<
-	
-
-HAL/usi/usi_program.o: ../HAL/usi/usi_program.c
+HAL/us/us_interface.o: ../HAL/us/us_interface.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
@@ -213,13 +213,6 @@ HAL/usi/usi_program.o: ../HAL/usi/usi_program.c
 	
 
 ./main.o: .././main.c
-	@echo Building file: $<
-	@echo Invoking: AVR/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
-	@echo Finished building: $<
-	
-
-MCAL/delay/pwm_program.o: ../MCAL/delay/pwm_program.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
@@ -254,14 +247,21 @@ MCAL/pwm/pwm_program.o: ../MCAL/pwm/pwm_program.c
 	@echo Finished building: $<
 	
 
-MCAL/tmr2/TMR2_interface.o: ../MCAL/tmr2/TMR2_interface.c
+MCAL/tmr0/tmr0_interface.o: ../MCAL/tmr0/tmr0_interface.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
-MCAL/tmr/tmr_program.o: ../MCAL/tmr/tmr_program.c
+MCAL/tmr1/tmr1_interface.o: ../MCAL/tmr1/tmr1_interface.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+MCAL/tmr2/tmr2_interface.o: ../MCAL/tmr2/tmr2_interface.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32a -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\2.0.401\gcc\dev\atmega32a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
